# A_posteriori_analysis

./: .gitignore  CMakeLists.txt  readme.md
lib/: CMakeLists.txt
lib/Base/: KalmanFilter.cpp  KalmanFilter.h  Locator.cpp  Locator.h  MonitoringComplex.cpp  MonitoringComplex.h
lib/Global/: RandomnessGenerator.cpp
lib/Helicopter/: AimingSystem.cpp  AimingSystem.h  Helicopter.cpp  Helicopter.h
lib/Ship/: OnBoardLocatorShip.cpp  OnBoardLocatorShip.h  Ship.cpp  Ship.h
lib/include/: AimingSystem.h  Helicopter.h  KalmanFilter.h  Locator.h  MonitoringComplex.h  OnBoardLocatorHelicopter.h  OnBoardSystem.h  RandomnessGenerator.h  Ship.h  Transport.h
lib/src/: AimingSystem.cpp  Helicopter.cpp  KalmanFilter.cpp  Locator.cpp  MonitoringComplex.cpp  OnBoardLocatorHelicopter.cpp  OnBoardSystem.cpp  RandomnessGenerator.cpp  Ship.cpp
view/: CMakeLists.txt  main.cpp
